--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Kunka
-keywords: Jekyll theme, Kunka
+title: 首页
+keywords: [大数据,Hadoop]
 ---
 {% for post in paginator.posts %}
     <div class="article">
